--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
         <title>Shoes</title>
     </head>
     <body>
+
+        <nav>
+            <div class="button">3</div>
+            <div class="button">2</div>
+            <div class="button">1</div>
+        </nav>
+
         
     </body>
 </html>
