--- a/index.html
+++ b/index.html
@@ -8,13 +8,25 @@
         <title>Shoes</title>
     </head>
     <body>
-
-        <nav>
-            <div class="button">3</div>
-            <div class="button">2</div>
-            <div class="button">1</div>
-        </nav>
+        <div class="nav-container">
+            <nav>
+                <div class="button">3</div>
+                <div class="button">2</div>
+                <div class="button">1</div>  
+            </nav>
+        </div>
 
         
+      
+        <div class="full-viewport red">
+            <div class="container">
+                <div class="contained">
+                    <img src="img/01.png" alt="scarpa differente">
+                    <h3>il nostro modello di punta</h3>
+                </div>
+            </div>
+        </div>
+
+
     </body>
 </html>
